[package]
name = "ETHGlobalSingapore"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
dotenv = "0.15.0"
thiserror = "1.0"
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }


